--- a/index.html
+++ b/index.html
@@ -1,8 +1,65 @@
-<html>
- 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<title>Code Mage Inc.</title>
+<meta charset="UTF-8">
+<meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
+<meta content="width=device-width, initial-scale=1.0" name="viewport">
+<meta content="" name="description">
+<link href="https://fonts.googleapis.com/css?family=Neuton|Roboto" rel="stylesheet">
+<style>
+.holder{
+width: 480px;
+text-align: center;
+margin: 0 auto;
+padding-top: 120px;
+}
+.holder h1 {
+font-family: 'loveloblack', sans-serif;
+font-size:5em;
+color:#2d2d2d;
+text-shadow: 3px 3px 0 #e3e3e3;
+line-height: 27px;
+margin-top: 12px;
+margin-bottom: 10px;
+}
+.holder h1 span.tbl{
+font-family: Dosis,Tahoma,sans-serif;
+font-size:35px;
+color:#2d2d2d;
+line-height:1em;
+font-weight: bold;
+letter-spacing: -1px;
+line-height: 1;
+text-shadow: -1px 1px 1px rgba(0, 0, 0, 0.3);
+}
+.holder h1 span {
+font-family: Dosis,Tahoma,sans-serif;
+font-size:1em;
+color:#3d9df8;
+line-height:1em;
+font-weight: bold;
+letter-spacing: -1px;
+line-height: 1;
+text-shadow: -1px 1px 1px rgba(0, 0, 0, 0.3);
+}  
+p{
+font-size: 18px;
+font-weight: 600;
+color: #13447E;
+font-family: 'Neuton', serif;
+}
+</style>
 
-<h1> renzmanacmol </h1>
-  
-  
+</head>
+<body>
+<div class="holder">
+<img src="https://dsbj2bvx6v57y.cloudfront.net/profiles/mm_profile/themes/bootstrap_mm/logo.png" style="width:250px;" />
+<h1><span class="tbl">Code Mage Inc.</span></h1>
+
+<br /> 
+
+<p><a href="mailto:codemage.inc@gmail.com">Contact us</a></p>
+</div>
+</body>
 </html>
-
