--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ font-family: 'Neuton', serif;
 </head>
 <body>
 <div class="holder">
-<img src="https://dsbj2bvx6v57y.cloudfront.net/profiles/mm_profile/themes/bootstrap_mm/logo.png" style="width:250px;" />
+<img src="https://bitbucket.org/rmanacmol/assets/raw/b30bf374f5a56aad467093366132ada11a80c328/GooglePlayStore.png" style="width:250px;" />
 <h1><span class="tbl">Code Mage Inc.</span></h1>
 
 <br /> 
