--- a/index.html
+++ b/index.html
@@ -1,65 +1,75 @@
-<!DOCTYPE html>
+
+<!doctype html>
 <html lang="en">
-<head>
-<title>Code Mage Inc.</title>
-<meta charset="UTF-8">
-<meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
-<meta content="width=device-width, initial-scale=1.0" name="viewport">
-<meta content="" name="description">
-<link href="https://fonts.googleapis.com/css?family=Neuton|Roboto" rel="stylesheet">
-<style>
-.holder{
-width: 480px;
-text-align: center;
-margin: 0 auto;
-padding-top: 120px;
-}
-.holder h1 {
-font-family: 'loveloblack', sans-serif;
-font-size:5em;
-color:#2d2d2d;
-text-shadow: 3px 3px 0 #e3e3e3;
-line-height: 27px;
-margin-top: 12px;
-margin-bottom: 10px;
-}
-.holder h1 span.tbl{
-font-family: Dosis,Tahoma,sans-serif;
-font-size:35px;
-color:#2d2d2d;
-line-height:1em;
-font-weight: bold;
-letter-spacing: -1px;
-line-height: 1;
-text-shadow: -1px 1px 1px rgba(0, 0, 0, 0.3);
-}
-.holder h1 span {
-font-family: Dosis,Tahoma,sans-serif;
-font-size:1em;
-color:#3d9df8;
-line-height:1em;
-font-weight: bold;
-letter-spacing: -1px;
-line-height: 1;
-text-shadow: -1px 1px 1px rgba(0, 0, 0, 0.3);
-}  
-p{
-font-size: 18px;
-font-weight: 600;
-color: #13447E;
-font-family: 'Neuton', serif;
-}
-</style>
+  <head>
+    <title>Renz Manacmol</title>
 
-</head>
-<body>
-<div class="holder">
-<img src="https://bitbucket.org/rmanacmol/assets/raw/b30bf374f5a56aad467093366132ada11a80c328/GooglePlayStore.png" style="width:250px;" />
-<h1><span class="tbl">Code Mage Inc.</span></h1>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
 
-<br /> 
+    <meta name="author" content="Renz Manacmol" />
+	 <meta name="description" content="Personal Website of Renz Manacmol" />
+	 <meta name="theme-color" content="#00796B">
 
-<p><a href="mailto:codemage.inc@gmail.com">Contact us</a></p>
-</div>
-</body>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en">
+    <link rel="stylesheet" href="https://code.getmdl.io/1.1.3/material.blue-green.min.css">
+  
+    <style>
+   		#header {
+   			background:#00796B;
+   			height:300px
+   		}
+		.jt-content {
+			text-align: center;
+			position:absolute;
+			width:100%;
+		}
+		img {
+   			border:0px;
+   		}
+   	.photo {
+			width: 150px;
+			height: 150px;
+			display: block;
+			margin-left: auto;
+			margin-right: auto;
+			margin-top: -75px;
+			border-radius: 75px;
+			-webkit-border-radius: 75px;
+			-moz-border-radius: 75px;
+			background: url(https://bitbucket.org/rmanacmol/assets/raw/295b8af475b9c74bdcf3c0874bdd3e8f12bea34f/profile_pic.png) no-repeat;
+			background-size: cover;
+			box-shadow: 0 0 8px rgba(0, 0, 0, .8);
+			-webkit-box-shadow: 0 0 8px rgba(0, 0, 0, .8);
+			-moz-box-shadow: 0 0 8px rgba(0, 0, 0, .8);
+		}
+		.icon {
+			margin:5px;
+      width:32px;
+		}    
+    </style>
+  </head>
+  <body>
+
+      <div class="jt-content mdl-layout__content">
+      	<div id="header">&nbsp;</div>
+      	<div class="photo"></div>
+      	<h1>Renz Manacmol</h1>
+		    <h4>Android Developer</h4>
+        <div style="margin-left:10%;margin-right:10%;">
+          <a href="https://play.google.com/store/apps/dev?id=9008217183799788919"><img class="icon" src="https://bytebucket.org/rmanacmol/assets/raw/a7f4db0b4446444d96528d257fb32bb95ea32ee5/icons/google-play.png" alt="View my apps on Google Play" title="View my apps on Google Play" /></a>
+          <a href="https://plus.google.com/116317986967638097014"><img class="icon" src="https://bytebucket.org/rmanacmol/assets/raw/a7f4db0b4446444d96528d257fb32bb95ea32ee5/icons/share-g%2B.png"  alt="Add me in your Google+ Circle" title="Add me in your Google+ Circle" /></a>
+          <a href="https://www.facebook.com/renz.manacmol"><img class="icon" src="https://bytebucket.org/rmanacmol/assets/raw/a7f4db0b4446444d96528d257fb32bb95ea32ee5/icons/share-facebook.png"  alt="View my Facebook profile" title="View my Facebook profile" /></a>    
+          <a href="https://www.linkedin.com/in/renz-manacmol-a389a1112/"><img class="icon" src="https://bytebucket.org/rmanacmol/assets/raw/a7f4db0b4446444d96528d257fb32bb95ea32ee5/icons/linkedin.png" alt="View my LinkedIn profile" title="View my LinkedIn profile" /></a>
+          <a href="https://github.com/rmanacmol"><img class="icon" src="https://bytebucket.org/rmanacmol/assets/raw/a7f4db0b4446444d96528d257fb32bb95ea32ee5/icons/github.png" alt="Check out my Github Profile" title="Check out my Github Profile" /></a>  
+          <a href="https://medium.com/@manacmol"><img class="icon" src="https://bytebucket.org/rmanacmol/assets/raw/a7f4db0b4446444d96528d257fb32bb95ea32ee5/icons/medium-monogram.png" alt="View my Medium Page" title="View my Medium Page" /></a>
+          <a href="https://stackoverflow.com/users/3897544/renz-manacmol"><img class="icon" src="https://bytebucket.org/rmanacmol/assets/raw/a7f4db0b4446444d96528d257fb32bb95ea32ee5/icons/stackoverflow.png" alt="View my StackOverflow Profile" title="View my StackOverflow Profile" /></a> 
+         <a href="mailto:manacmol@gmail.com"><img class="icon" src="https://bytebucket.org/rmanacmol/assets/raw/a7f4db0b4446444d96528d257fb32bb95ea32ee5/icons/email.png" alt="Send me an email" title="Email me" /></a>
+        </div>  
+    		
+      </div>
+    </div>
+ 
+  </body>
 </html>
