--- a/index.html
+++ b/index.html
@@ -65,8 +65,10 @@
           <a target="_blank" href="https://github.com/rmanacmol"><img class="icon" src="https://bytebucket.org/rmanacmol/assets/raw/a7f4db0b4446444d96528d257fb32bb95ea32ee5/icons/github.png" alt="Check out my Github Profile" title="Check out my Github Profile" /></a>  
           <a target="_blank" href="https://medium.com/@manacmol"><img class="icon" src="https://bytebucket.org/rmanacmol/assets/raw/a7f4db0b4446444d96528d257fb32bb95ea32ee5/icons/medium-monogram.png" alt="View my Medium Page" title="View my Medium Page" /></a>
           <a target="_blank" href="https://stackoverflow.com/users/3897544/renz-manacmol"><img class="icon" src="https://bytebucket.org/rmanacmol/assets/raw/a7f4db0b4446444d96528d257fb32bb95ea32ee5/icons/stackoverflow.png" alt="View my StackOverflow Profile" title="View my StackOverflow Profile" /></a> 
-         <a target="_blank" href="mailto:manacmol@gmail.com"><img class="icon" src="https://bytebucket.org/rmanacmol/assets/raw/a7f4db0b4446444d96528d257fb32bb95ea32ee5/icons/email.png" alt="Send me an email" title="Email me" /></a>
+         <a href="mailto:manacmol@gmail.com"><img class="icon" src="https://bytebucket.org/rmanacmol/assets/raw/a7f4db0b4446444d96528d257fb32bb95ea32ee5/icons/email.png" alt="Send me an email" title="Email me" /></a>
         </div>  
+
+         <img src="https://bitbucket.org/rmanacmol/assets/raw/b30bf374f5a56aad467093366132ada11a80c328/GooglePlayStore.png" style="width:250px;" />
     		
       </div>
     </div>
