--- a/index.html
+++ b/index.html
@@ -57,8 +57,10 @@
       	<div class="photo"></div>
       	<h1>Renz Manacmol</h1>
 
-		    <h5> Hi I'm an Android Developer from Philippines  🇵🇭, currently based in Singapore 🇸🇬 </h4>
+		    <h5> Hi I'm an Android Developer from Philippines  🇵🇭, <br/> currently based in Singapore  🇸🇬 </h4>
         <div style="margin-left:10%;margin-right:10%;">
+         
+         <br/>
          
           <a target="_blank" href="https://play.google.com/store/apps/dev?id=9008217183799788919"><img class="icon" src="https://bytebucket.org/rmanacmol/assets/raw/a7f4db0b4446444d96528d257fb32bb95ea32ee5/icons/google-play.png" alt="View my apps on Google Play" title="View my apps on Google Play" /></a>
 
