--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
       	<div class="photo"></div>
       	<h1>Renz Manacmol</h1>
 
-		    <h5> Hi I'm an Android Developer from Philippines  🇵🇭, <br/> currently based in Singapore  🇸🇬 </h4>
+		    <h5> Android Developer </h5>
+
         <div style="margin-left:10%;margin-right:10%;">
          
          <br/>
